--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"posttest": "npx npm@'>= 10.2' audit --production",
 		"prelint": "evalmd README.md",
 		"lint": "eslint --ext=js,mjs .",
+		"postlint": "tsc && attw -P",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
 	},
@@ -47,7 +48,14 @@
 		"reflect.ownkeys": "^1.1.4"
 	},
 	"devDependencies": {
+		"@arethetypeswrong/cli": "^0.17.1",
 		"@ljharb/eslint-config": "^21.1.1",
+		"@ljharb/tsconfig": "^0.2.2",
+		"@types/array.prototype.flatmap": "^1.2.6",
+		"@types/for-each": "^0.3.3",
+		"@types/object-inspect": "^1.13.0",
+		"@types/reflect.ownkeys": "^1.1.0",
+		"@types/tape": "^5.6.5",
 		"auto-changelog": "^2.5.0",
 		"encoding": "^0.1.13",
 		"es-value-fixtures": "^1.5.0",
@@ -60,7 +68,8 @@
 		"nyc": "^10.3.2",
 		"object-inspect": "^1.13.3",
 		"safe-publish-latest": "^2.0.0",
-		"tape": "^5.9.0"
+		"tape": "^5.9.0",
+		"typescript": "^5.8.0-dev.20241211"
 	},
 	"testling": {
 		"files": "test/index.js"
