--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
 		"@types/for-each": "^0.3.3",
 		"@types/object-inspect": "^1.13.0",
 		"@types/reflect.ownkeys": "^1.1.0",
-		"@types/tape": "^5.6.5",
+		"@types/tape": "^5.8.0",
 		"auto-changelog": "^2.5.0",
 		"encoding": "^0.1.13",
 		"es-value-fixtures": "^1.5.0",
@@ -63,13 +63,13 @@
 		"evalmd": "^0.0.19",
 		"for-each": "^0.3.3",
 		"in-publish": "^2.0.1",
-		"intl-fallback-symbol": "^1.1.0",
+		"intl-fallback-symbol": "^1.1.1",
 		"npmignore": "^0.3.1",
 		"nyc": "^10.3.2",
 		"object-inspect": "^1.13.3",
 		"safe-publish-latest": "^2.0.0",
 		"tape": "^5.9.0",
-		"typescript": "^5.8.0-dev.20241211"
+		"typescript": "next"
 	},
 	"testling": {
 		"files": "test/index.js"
