--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"call-bound": "^1.0.3",
 		"has-symbols": "^1.1.0",
 		"is-symbol": "^1.1.1",
-		"reflect.ownkeys": "^1.1.4"
+		"own-keys": "^1.0.0"
 	},
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.17.2",
@@ -53,7 +53,6 @@
 		"@ljharb/tsconfig": "^0.2.3",
 		"@types/for-each": "^0.3.3",
 		"@types/object-inspect": "^1.13.0",
-		"@types/reflect.ownkeys": "^1.1.0",
 		"@types/tape": "^5.8.0",
 		"auto-changelog": "^2.5.0",
 		"encoding": "^0.1.13",
